georef validation cleanup step 2